--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Language" content="zh_TW" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>犀利士Cialis_美國犀利士_正品保證_評價_價格_官網直營</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <title>犀利士官網_美國犀利士</title>
     <meta name="keywords" content="犀利士,犀利士Cialis,犀利士ptt,犀利士價格,犀利士副作用,犀利士效果,犀利士評價,犀利士5mg,犀利士20mg,犀利士哪裡買" />
     <meta name="description" content="美國禮來犀利士（Cialis）官網直營，100%正品確保、7天鑒賞、隱私保護、貨到付款，犀利士是一種專為男性設計的藥物，主要用於治療勃起功能障礙或陽痿，起效快、藥效最高可達36小時，是全球最受歡迎的調養型壯陽藥。" />
     <link href="css/base.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
-    <h1>犀利士官網訂購</h1>
-    <h2><a href="https://cialisus.com">https://cialisus.com</a></h2>
+    <div class="box">
+        <div class="head">
+            <img style="border-radius:50%;max-width:100px;max-height:100px;" src="http://q2.qlogo.cn/headimg_dl?dst_uin=817094&spec=100">
+        </div>
+        <h1>犀利士官網</h1>
+        <div class="text">
+            <p>Cialis®是美國禮來製藥面向全球的男性ED用品，有數以百萬的評價證明犀利士是目前最好的產品之一；</p>
+            <p>(cialisus.com)是目前唯一在線訂購網站，你能在此獲得來自美國生產的犀利士以及專業的治療幫助。</p>
+        </div>
+        <div class="nav">
+            <a href="https://cialisus.com">去官網</a>
+        </div>
+        <script type="text/javascript" color="255,255,255" opacity='0.7' zIndex="-2" count="200" src="js/canvas-nest.min.js"></script>
+    </div>
+    <script type="text/javascript">
+        window.onload = function () {
+            document.onkeydown = function () {
+                var e = window.event || arguments[0];
+                if (e.keyCode == 123) {
+                    return false;
+                } else if ((e.ctrlKey) && (e.shiftKey) && (e.keyCode == 73)) {
+                    return false;
+                } else if ((e.ctrlKey) && (e.keyCode == 85)) {
+                    return false;
+                }
+            };
+            document.oncontextmenu = function () {
+                return false;
+            }
+        }
+    </script>
 </body>
 </html>
