--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <div class="nav">
             <a href="https://cialisus.com">去官網</a>
         </div>
+        <div class="urlList">
+            <a href="https://lmyj.com.tw">龍門藥局</a>
+            <a href="https://lmyj.tw">龍門藥局官网</a>
+            <a href="https://cialisus.com">犀利士官網</a>
+            <a href="https://priligy-official.com/">必利勁官網</a>
+            <a href="https://viagra-official.com/">威而鋼官網</a>
+            <a href="https://cialisus.com">犀利士哪裡買</a>
+            <a href="https://priligy-official.com/">必利勁哪裡買</a>
+            <a href="https://viagra-official.com/">威而鋼哪裡買</a>
+        </div>
         <script type="text/javascript" color="255,255,255" opacity='0.7' zIndex="-2" count="200" src="js/canvas-nest.min.js"></script>
     </div>
     <script type="text/javascript">
