--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <h1>犀利士官網</h1>
         <div class="text">
-            <p>Cialis®是美國禮來製藥面向全球的男性ED用品，有數以百萬的評價證明犀利士是目前最好的產品之一；</p>
+            <p>Cialis®是美國禮來製藥面向全球的男性ED用品，有數以百萬的評價證明犀利士是目前最好的產品之一。</p>
             <p>(cialisus.com)是目前唯一在線訂購網站，你能在此獲得來自美國生產的犀利士以及專業的治療幫助。</p>
         </div>
         <div class="nav">
