--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>犀利士官網_美國犀利士</title>
     <meta name="keywords" content="犀利士,犀利士Cialis,犀利士ptt,犀利士價格,犀利士副作用,犀利士效果,犀利士評價,犀利士5mg,犀利士20mg,犀利士哪裡買" />
     <meta name="description" content="美國禮來犀利士（Cialis）官網直營，100%正品確保、7天鑒賞、隱私保護、貨到付款，犀利士是一種專為男性設計的藥物，主要用於治療勃起功能障礙或陽痿，起效快、藥效最高可達36小時，是全球最受歡迎的調養型壯陽藥。" />
+    <meta property="og:locale" content="zh_TW" />
     <link href="css/base.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
