--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>(cialisus.com)是目前唯一在線訂購網站，你能在此獲得來自美國生產的犀利士以及專業的治療幫助。</p>
         </div>
         <div class="nav">
-            <a href="https://cialisus.com">去官網</a>
+            <a href="https://cialisus.com">立即訂購</a>
         </div>
         <div class="urlList">
             <a href="https://lmyj.com.tw">龍門藥局</a>
